--- a/index.html
+++ b/index.html
@@ -5,18 +5,23 @@
     <title>My Angular App!</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
     <script src="app.js"></script>
     <style> .glyphicon-thumbs-up { cursor: pointer }</style>
 </head>
 
-<body ng-app="flapperNews" ng-controller="MainCtrl">
+<body ng-app="flapperNews">
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
+            <ui-view></ui-view>
+            <script type="text/ng-template" id="/home.html"></script>
             <div class="page-header">
                 <h1>Flapper News</h1>
             </div>
 
             <div ng-repeat="post in posts | orderBy: '-upvotes'">
+                <span class="glyphicon glyphicon-thumbs-down"
+                      ng-click="decrementUpvotes(post)"></span>
                 <span class="glyphicon glyphicon-thumbs-up"
                       ng-click="incrementUpvotes(post)"></span>
                 {{ post.upvotes }}
